--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,3 +7,8 @@ gem "github-pages", "~> 228", group: :jekyll_plugins
 # gem "rails"
 
 gem "webrick", "~> 1.8"
+
+group :jekyll_plugins do
+    gem 'jekyll-sitemap'
+    gem 'jekyll-seo-tag'
+end
